--- a/package.json
+++ b/package.json
@@ -13,18 +13,21 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~9.1.9",
-    "@angular/common": "~9.1.9",
-    "@angular/compiler": "~9.1.9",
-    "@angular/core": "~9.1.9",
-    "@angular/elements": "^9.1.9",
-    "@angular/forms": "~9.1.9",
-    "@angular/platform-browser": "~9.1.9",
-    "@angular/platform-browser-dynamic": "~9.1.9",
-    "@angular/router": "~9.1.9",
+    "@angular/animations": "^9.1.12",
+    "@angular/cdk": "^10.1.1",
+    "@angular/common": "^9.1.12",
+    "@angular/compiler": "^9.1.12",
+    "@angular/core": "^9.1.12",
+    "@angular/elements": "^9.1.12",
+    "@angular/forms": "^9.1.12",
+    "@angular/material": "^10.1.1",
+    "@angular/platform-browser": "^9.1.12",
+    "@angular/platform-browser-dynamic": "^9.1.12",
+    "@angular/router": "^9.1.12",
+    "@types/webrtc": "0.0.26",
     "bootstrap": "^4.5.0",
     "classlist.js": "^1.1.20150312",
-    "document-register-element": "^1.8.1",
+    "document-register-element": "^1.14.3",
     "font-awesome": "^4.7.0",
     "ngx-bootstrap": "^5.6.1",
     "rxjs": "~6.5.4",
@@ -33,12 +36,12 @@
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.901.7",
-    "@angular/cli": "~9.1.7",
-    "@angular/compiler-cli": "~9.1.9",
-    "@types/jasmine": "~3.5.0",
+    "@angular-devkit/build-angular": "^0.901.12",
+    "@angular/cli": "^9.1.12",
+    "@angular/compiler-cli": "^9.1.12",
+    "@types/jasmine": "^3.5.11",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.11.1",
+    "@types/node": "^12.12.53",
     "codelyzer": "^5.1.2",
     "concat": "^1.0.3",
     "fs-extra": "^9.0.1",
